Archive2/8d/63739dfaeb84a8/output
main.cpp:2:1: error: C++ requires a type specifier for all declarations
main()
^~~~
main.cpp:3:46: warning: format specifies type 'int *' but the argument has type 'int' [-Wformat]
{printf("Hello world!");char c=0;scanf("%d", c);return 0;}
                                        ~~   ^
1 warning and 1 error generated.
