Archive2/8d/63739dfaeb84a8/main.cpp
#include <iostream>
main()
{printf("Hello world!");char c=0;scanf("%d", c);return 0;}